# pit

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  ORC.md  README.md  install.sh
.claude/: settings.json
.github/workflows/: release.yml
src/: db.rs  error.rs  init.rs  kanban.rs  main.rs  mcp.rs  settings.rs  tail.rs  types.rs
src/prompts/: mcp.md
template/: .mcp.json  CLAUDE.md
template/.claude/: settings.json
template/.claude/bins/: delegate  review
