[package]
name = "pit"
version = "0.3.0"
edition = "2024"
description = "Local issue tracker MCP server — one binary, one SQLite file"
repository = "https://github.com/uname-n/pit"
keywords = ["mcp", "issue-tracker", "sqlite", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
